# aoi

./: .clang-format  LICENSE  README.md  dumped_format.cfg  engine_force_remove_Host.py  format.cpp  gluster.py  install_repos_rhv.py  pync-client.py  tools.md
VPP/: README.md  sai_vpp.cpp  sonic_vpp_ipinip_hld.md  sonic_vpp_learning_plan.md  sonic_vpp_port_setup.md  sonic_vpp_sai_implementation.md  sonic_vpp_t0.conf  vpp_architecture.md  vpp_binary_api_cheatsheet.md  vpp_cli_cheatsheet.md  vpp_data_structures.md  vpp_debug_no_arp_delivery.md  vpp_headers_cheatsheet.md  vpp_install_and_setup.md  vpp_mem_alloc.md  vpp_metrics.md  vpp_msg.md  vpp_overview.md  vpp_progressive_usages.md  vpp_sharing.md  vpp_sonic_intergation_overview.md  vpp_trace_packet.md
blogs/: technical_blogs.md
boost/: barrier.cpp  bind.cpp  deadline_timer.cpp  run_one_with_deadline_timer.cpp  signal_set.cpp  uuid.cpp
cpp/: README.md  array.cpp  bitset.cpp  compound_types.cpp  const.cpp  crtp_counter.cpp  custom_new.cpp  define_directive.cpp  elide.cpp  final.cpp  forward_as_tuple_and_piecewise_construct.md  function_overloading.cpp  function_template.cpp  function_vargs.cpp  functor.cpp  lambda.cpp  layout.cpp  map.cpp  memory_model.md  new_handler.cpp  ntoh.cpp  parameter_pack.cpp  placement_new.cpp  swap.cpp  test_chrono.cpp  variadic_template.cpp  vector_valarray_array.cpp  virtual.cpp
grpc/: HTTP2_basics.md  README.md
gtest_project/: CMakeLists.txt  README.md  hello_test.cc  test_target.cpp
linux/: README.md  bpf.cpp  linux_arp.md  linux_bridge.md  linux_debug_proc_io_error.md  perf.md  (+12 more)
(+653 files in other folders)
